--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   equatable: ^1.2.5
   flutter_bloc: ^6.1.3
+  visibility_detector: ^0.2.0
 
 dev_dependencies:
   flutter_test:
